fix date text alignment for two-column left timeline elements

--- a/src/VerticalTimelineElement.css
+++ b/src/VerticalTimelineElement.css
@@ -258,6 +258,7 @@
     top: 6px;
     font-size: 16px;
     font-size: 1rem;
+    text-align: left;
   }
 
   .vertical-timeline--two-columns .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content,
